--- a/_layouts/profile.html
+++ b/_layouts/profile.html
@@ -2,17 +2,17 @@
 <html>
 	<head>
 		<meta http-equiv="content-type" content="text/html;charset=utf-8" />
-		<title>i 宅男(女) 地</title>
+		<title>信息地带新动向 —— Information Zone New Developments</title>
         <meta name="description" content="友情链接,friendlinks"/>
 		<meta name="author" content="Poison,一抹毒药" />
-        <meta name="copyright" content="i 宅男(女) 地" />
-		<link rel="alternate" type="application/rss+xml" title="RSS" href="http://feed.feedsky.com/nshen">
+        <meta name="copyright" content="信息地带新动向 —— Information Zone New Developments" />
+		<link rel="alternate" type="application/rss+xml" title="RSS" href="http://feed.feedsky.com/iznd">
 		<link rel="stylesheet" type="text/css" href="/css/style.css" />
 		<link rel="stylesheet" type="text/css" href="/css/syntax.css" />
 	</head>
 
 	<body>
-		<div id="logo"><h1><a href="/">i 宅男(女) 地</a></h1></div>
+		<div id="logo"><h1><a href="/">信息地带新动向 —— Information Zone New Developments</a></h1></div>
 		<div id="wrapper">
 			<div id="content" class="index">
 			
@@ -28,7 +28,19 @@
 				<div id="main">
 					{{ content }}
 				</div>
-            </div>
+			</div>
+			<div id="footer">
+				<div id="feed">
+					<div class="badget" id="feedburner">
+						<a href="http://feed.feedsky.com/iznd" target="_blank" />
+						<span class="service">rss</span>
+						<span class="info"> </span>
+						</a>
+					</div>
+				</div>
+				<span style="color:#bbb;font-size:12px">陕ICP备09018708号</span>
+				<p style="clear:both"></p>
+				</div>
 		</div>
 	</body>
 </html>
