--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -6,14 +6,14 @@
 		<meta name="keywords" content="Java,J2EE,IZND,宅男,宅女,GIT,GITHUB,{{ page.title }}" />
         <meta name="description" content="Category {{ page.title }}"/>
 		<meta name="author" content="Poison,一抹毒药" />
-        <meta name="copyright" content="i 宅男(女) 地" />
-		<link rel="alternate" type="application/rss+xml" title="RSS" href="http://feed.feedsky.com/nshen">
+        <meta name="copyright" content="信息地带新动向 —— Information Zone New Developments" />
+		<link rel="alternate" type="application/rss+xml" title="RSS" href="http://feed.feedsky.com/iznd">
 		<link rel="stylesheet" type="text/css" href="/css/style.css" />
 		<link rel="stylesheet" type="text/css" href="/css/syntax.css" />
 	</head>
 
 	<body>
-		<div id="logo"><h1><a href="/">i 宅男(女) 地</a></h1></div>
+		<div id="logo"><h1><a href="/">信息地带新动向 —— Information Zone New Developments</a></h1></div>
 		<div id="wrapper">
 			<div id="content" class="index">
 				<div id="sidebar">
@@ -40,7 +40,7 @@
 					<h1>CATEGORY » {{ page.title }}</h1>
 					{{ content }}
 				</div>
-            </div>
+			</div>
 		</div>	
 
 	</body>
