--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,20 +2,20 @@
 <html>
 	<head>
 		<meta http-equiv="content-type" content="text/html;charset=utf-8" />
-		<title>i 宅男(女) 地</title>
+		<title>信息地带新动向 —— Information Zone New Developments</title>
 		<meta name="robots" content="follow,index" />
 		<meta name="keywords" content="Java,J2EE,IZND,宅男,宅女,GIT,GITHUB,教程,个人博客" />
-        <meta name="description" content="i 宅男(女) 地，做自己让别人说去吧。"/>
+        <meta name="description" content="信息地带新动向 —— Information Zone New Developments"/>
 		<meta name="author" content="Poison,一抹毒药" />
-        <meta name="copyright" content="i 宅男(女) 地" />
-		<link rel="alternate" type="application/rss+xml" title="RSS" href="http://feed.feedsky.com/nshen">
+        <meta name="copyright" content="信息地带新动向 —— Information Zone New Developments" />
+		<link rel="alternate" type="application/rss+xml" title="RSS" href="http://feed.feedsky.com/iznd">
 		<link rel="stylesheet" type="text/css" href="/css/style.css" />
 		<link rel="stylesheet" type="text/css" href="/css/syntax.css" />
 
 	</head>
 
 	<body>
-		<div id="logo"><h1><a href="/">i 宅男(女) 地</a></h1></div>
+		<div id="logo"><h1><a href="/">信息地带新动向 —— Information Zone New Developments</a></h1></div>
 		<div id="wrapper">
 			<div id="content" class="index">
 				<div id="sidebar">
@@ -57,7 +57,7 @@
 
 			</div>
 
-        </div>
+		</div>
 
 	</body>
 </html>
