--- a/_layouts/quote.html
+++ b/_layouts/quote.html
@@ -2,20 +2,20 @@
 <html>
 	<head>
 		<meta http-equiv="content-type" content="text/html;charset=utf-8" />
-		<title>{{ page.title }} - i 宅男(女) 地</title>
+		<title>{{ page.title }} | 信息地带新动向 —— Information Zone New Developments</title>
 		<meta name="robots" content="follow,index" />
 		<meta name="keywords" content="{{ page.title }},Java,J2EE,IZND,宅男,宅女,GIT,GITHUB" />
         <meta name="description" content="{{ page.title }}"/>
 		<meta name="author" content="Poison,一抹毒药" />
-        <meta name="copyright" content="i 宅男(女) 地" />
-		<link rel="alternate" type="application/rss+xml" title="RSS" href="http://feed.feedsky.com/nshen">
+        <meta name="copyright" content="信息地带新动向 —— Information Zone New Developments" />
+		<link rel="alternate" type="application/rss+xml" title="RSS" href="http://feed.feedsky.com/iznd">
 		<link rel="stylesheet" type="text/css" href="/css/style.css" />
 		<link rel="stylesheet" type="text/css" href="/css/syntax.css" />
 		<script type="text/javascript" src="/css/swfobject.js"></script>
 	</head>
 
 	<body>
-	   <div id="logo"><h1><a href="/">i 宅男(女) 地</a></h1></div>
+		<div id="logo"><h1><a href="/">信息地带新动向 —— Information Zone New Developments</a></h1></div>
 		<div id="wrapper">
 			<div id="content">
 				<h2>{{ page.title }}</h2>
@@ -25,23 +25,20 @@
 					--EOF--
 					<p>本文转载自网络，转载请保留<a href="http://www.iznd.com">链接</a>，谢谢。</p>
 				</div>						
-
-
-				<div id="footer">
-					<div id="feed">
-						<div class="badget" id="feedburner">
-							<a href="http://feed.feedsky.com/iznd">
-							<span class="service">rss</span>
-							<span class="info"> </span>
-							</a>
-						</div>
+			</div>
+			<div id="footer">
+				<div id="feed">
+					<div class="badget" id="feedburner">
+						<a href="http://feed.feedsky.com/iznd">
+						<span class="service">rss</span>
+						<span class="info"> </span>
+						</a>
 					</div>
-					<span style="color:#bbb;font-size:12px">陕ICP备09018708号</span>
-					<p style="clear:both"></p>
 				</div>
-         </div>
-      </div>
-
+				<span style="color:#bbb;font-size:12px">陕ICP备09018708号</span>
+				<p style="clear:both"></p>
+			</div>
+		</div>
 	</body>
 </html>
 
