--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta http-equiv="content-type" content="text/html;charset=utf-8" />
-		<title>i 宅男(女) 地</title>
+		<title>信息地带新动向 —— Information Zone New Developments</title>
 		<link rel="stylesheet" type="text/css" href="/css/style.css" />
 		<link rel="stylesheet" type="text/css" href="/css/syntax.css" />
 	</head>
@@ -10,14 +10,24 @@
 	<body>
 		<div id="logo"><h1><a href="/resume.html">个人简历</a></h1></div>
 		<div id="wrapper">
-	     	<div id="content" >	
-               <div class="cnt">			
-				
+	     		<div id="content" >	
+				<div class="cnt">			
 					{{ content }}
 				</div>
-            </div>
-		</div>
-			
+			</div>
+			<div id="footer">
+				<div id="feed">
+					<div class="badget" id="feedburner">
+						<a href="http://feed.feedsky.com/iznd" target="_blank" />
+						<span class="service">rss</span>
+						<span class="info"> </span>
+						</a>
+					</div>
+				</div>
+				<span style="color:#bbb;font-size:12px">陕ICP备09018708号</span>
+				<p style="clear:both"></p>
+			</div>
+		</div>	
 	</body>
 </html>
 
