--- a/_layouts/quote.html
+++ b/_layouts/quote.html
@@ -23,7 +23,7 @@
 					{{ content }}
 					<br />
 					--EOF--
-					<p>本文转载自网络，转载请保留<a href="http://www.iznd.com">链接</a>，谢谢。</p>
+					<p>本文转载自网络，转载请保留<a href="{{site.url}}{{page.url}}">链接</a>，谢谢。</p>
 				</div>						
 			</div>
 			<div id="footer">
