--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -20,10 +20,13 @@
 			<div id="content">
 				<h2>{{ page.title }}</h2>
 				<div class="cnt">
+					<p>本文为原创日志，转载请注明出处:<br />http://www.iznd.com/dataStructure/2012/10/19/wp.index.php.html</p>
+					<br /><br />
 					{{ content }}
 					<br />
 					--EOF--
-					<p>本站文章均为原创，转载请保留<a href="http://www.iznd.com/{{page.url}}">链接</a>，谢谢。</p>
+					<p>本站文章均为原创，转载请保留<a href="{{site.url}}{{page.url}}">链接</a>，谢谢。</p>
+					<p>{{site.url}}{{page.url}}</p>
 				</div>						
 
 
